--- a/deno.json
+++ b/deno.json
@@ -1,14 +1,16 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts",
+    "dev": "deno run --allow-net --watch src/main.ts",
     "server:dev": "deno run --allow-net --watch src/main.ts",
     "server:start": "deno run --allow-net src/main.ts",
     "test": "deno test",
     "issues:scan": ".git-bin/git-issues.ts",
-    "issues:scan:src": ".git-bin/git-issues.ts --path src --tag TODO,BUG --out .git-bin/.bugs",
-    "issues:hook:install": "sh -c 'printf \"%s\\n\" \"#!/bin/sh\" \".git-bin/git-issues.ts --out .git-bin/.issues\" \".git-bin/git-issues.ts --path src --tag TODO,BUG --out .git-bin/.bugs\" \".git-bin/issues-web.ts\" > .git/hooks/post-commit && chmod +x .git/hooks/post-commit .git-bin/git-issues.ts .git-bin/issues-web.ts'",
+    "issues:scan:src": ".git-bin/git-issues.ts --path src --out .git-bin/.bugs",
+    "issues:hook:install": "sh -c 'printf \"%s\\n\" \"#!/bin/sh\" \".git-bin/git-issues.ts --out .git-bin/.issues\" \".git-bin/git-issues.ts --path src --out .git-bin/.bugs\" \".git-bin/issues-web.ts\" > .git/hooks/post-commit && chmod +x .git/hooks/post-commit .git-bin/git-issues.ts .git-bin/issues-web.ts'",
     "issues:web": "deno run --allow-read --allow-write .git-bin/issues-web.ts",
-    "issues:web:open": "sh -c 'deno task issues:web >/dev/null 2>&1 || true; open .git-bin/issues.html'"
+    "issues:web:open": "deno run --allow-read --allow-run .git-bin/open-html.ts",
+    "issues:watch": "deno run -A --watch=. .git-bin/issues-watch.ts",
+    "release": "deno run -A .git-bin/release.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
